--- a/index.html
+++ b/index.html
@@ -7,14 +7,12 @@
 <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet">
 <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
 <style>
-  body { margin: 0; padding: 0; font-family: 'Helvetica Neue', Arial, sans-serif; background: #f4f4f4; overflow: hidden; }
+  body { margin: 0; padding: 0; font-family: sans-serif; background: #f4f4f4; overflow: hidden; }
   #mly-container { position: absolute; top: 0; bottom: 0; left: 0; width: 50%; background: #000; border-right: 2px solid #35af6d; }
   #map-container { position: absolute; top: 0; bottom: 0; right: 0; width: 50%; }
   #map { width: 100%; height: 100%; }
   iframe { width: 100%; height: 100%; border: none; }
   .controls { position: absolute; top: 15px; right: 15px; z-index: 10; background: white; padding: 12px; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); width: 180px; display: flex; flex-direction: column; gap: 8px; }
-  label { font-size: 10px; font-weight: bold; color: #666; text-transform: uppercase; }
-  input { padding: 6px; border: 1px solid #ccc; border-radius: 4px; font-size: 12px; }
   button { padding: 10px; background: #35af6d; color: white; border: none; border-radius: 4px; cursor: pointer; font-weight: bold; }
 </style>
 </head>
@@ -23,47 +21,25 @@
 <div id="mly-container"><iframe id="mly-frame" src="https://www.mapillary.com/embed?style=photo&menu=false"></iframe></div>
 <div id="map-container">
   <div class="controls">
-    <label>From Date</label><input type="date" id="date-from">
-    <label>To Date</label><input type="date" id="date-to">
     <button onclick="applyDateFilter()">Filter Road Runs</button>
   </div>
   <div id="map"></div>
 </div>
 
 <script>
-  // Step 1: Detect Client Folder from URL
   const urlParams = new URLSearchParams(window.location.search);
-  const clientID = urlParams.get('id') || 'MSDOT'; // Must match GitHub folder name exactly
+  const clientID = urlParams.get('id') || 'MSDOT'; 
   
   let config = {};
   mapboxgl.accessToken = 'pk.eyJ1IjoianZldHRlcnMiLCJhIjoiY21sazFhdDg5MDV3dDNlcTI3aXlwejIwaSJ9.ecEavihruz0TZguVQvRiVg';
   const mlyToken = 'MLY|25724468457195152|d9c0ac6f4fbcd6ede3a3ba4e8332729b';
 
-  const stringToColour = (str) => {
-    let hash = 0;
-    for (let i = 0; i < str.length; i++) { hash = str.charCodeAt(i) + ((hash << 5) - hash); }
-    let colour = '#';
-    for (let i = 0; i < 3; i++) { let value = (hash >> (i * 8)) & 0xFF; colour += ('00' + value.toString(16)).substr(-2); }
-    return colour;
-  }
-
-  // Step 2: Fetch config.json with Debug Logging
   async function loadConfig() {
-    const configPath = `./${clientID}/config.json`;
-    console.log("Searching for config at:", configPath);
-
     try {
-      const response = await fetch(configPath);
-      if (!response.ok) {
-         console.error(`HTTP Error: ${response.status} at ${configPath}`);
-         return;
-      }
+      const response = await fetch(`./${clientID}/config.json`);
       config = await response.json();
-      console.log("Config loaded successfully:", config);
       initMap();
-    } catch (e) {
-      console.error("Fetch failed. Check folder name capitalization:", e);
-    }
+    } catch (e) { console.error("Config missing for:", clientID); }
   }
 
   function initMap() {
@@ -75,45 +51,61 @@
     });
 
     map.on('load', () => {
-      map.addSource('mapillary', { 
-        type: 'vector', 
-        tiles: [`https://tiles.mapillary.com/maps/vtp/mly1_public/2/{z}/{x}/{y}?access_token=${mlyToken}`], 
-        maxzoom: 17 
+      // 1. MAPILLARY VECTORS (Sequence + Image)
+      map.addSource('mapillary', {
+        type: 'vector',
+        tiles: [`https://tiles.mapillary.com/maps/vtp/mly1_public/2/{z}/{x}/{y}?access_token=${mlyToken}`],
+        maxzoom: 17
       });
 
-      // Load Points from subfolder
+      // The Bubbles (Image points)
+      map.addLayer({
+        id: 'mapillary-points',
+        type: 'circle',
+        source: 'mapillary',
+        'source-layer': 'image',
+        paint: {
+          'circle-radius': ['interpolate', ['linear'], ['zoom'], 12, 2, 17, 6],
+          'circle-color': '#35af6d',
+          'circle-stroke-width': 1,
+          'circle-stroke-color': '#fff'
+        }
+      });
+
+      // 2. DEBRIS POINTS (From your MSDOT folder)
       if (config.pointsFile) {
-        map.addSource('live-points', { type: 'geojson', data: `./${clientID}/${config.pointsFile}` });
-        map.addLayer({ 
-          id: 'live-points-layer', 
-          type: 'circle', 
-          source: 'live-points', 
-          paint: { 'circle-radius': 7, 'circle-color': '#e74c3c', 'circle-stroke-width': 2, 'circle-stroke-color': '#fff' } 
+        map.addSource('debris-points', {
+          type: 'geojson',
+          data: `./${clientID}/${config.pointsFile}`
+        });
+
+        map.addLayer({
+          id: 'debris-layer',
+          type: 'circle',
+          source: 'debris-points',
+          paint: {
+            'circle-radius': 8,
+            'circle-color': '#e74c3c', // Bright Red
+            'circle-stroke-width': 2,
+            'circle-stroke-color': '#fff'
+          }
         });
       }
 
-      // Load Polygons from subfolder
+      // 3. COUNTIES
       if (config.polygonFile) {
         fetch(`./${clientID}/${config.polygonFile}`)
           .then(res => res.json())
           .then(data => {
-            data.features.forEach(f => f.properties.dynamicColor = stringToColour(f.properties.Name || "default"));
-            map.addSource('client-data', { type: 'geojson', data: data });
-            map.addLayer({ 
-              id: 'county-fills', 
-              type: 'fill', 
-              source: 'client-data', 
-              paint: { 'fill-color': ['get', 'dynamicColor'], 'fill-opacity': 0.15, 'fill-outline-color': 'rgba(0,0,0,0.1)' } 
-            }, config.pointsFile ? 'live-points-layer' : undefined);
+            map.addSource('counties', { type: 'geojson', data: data });
+            map.addLayer({
+              id: 'county-fills',
+              type: 'fill',
+              source: 'counties',
+              paint: { 'fill-color': '#888', 'fill-opacity': 0.1, 'fill-outline-color': '#000' }
+            }, 'mapillary-points'); // Under the bubbles
 
-            map.addLayer({ 
-              id: 'mapillary-lines', 
-              type: 'line', 
-              source: 'mapillary', 
-              'source-layer': 'sequence', 
-              paint: { 'line-color': '#35af6d', 'line-width': 2, 'line-opacity': 0.7 } 
-            });
-
+            // Fit bounds
             const bounds = new mapboxgl.LngLatBounds();
             data.features.forEach(f => {
               if (f.geometry && f.geometry.coordinates) {
@@ -126,11 +118,16 @@
       }
     });
 
+    // CLICK BUBBLE TO SEE VIEW
     map.on('click', 'mapillary-points', (e) => {
-      document.getElementById('mly-frame').src = `https://www.mapillary.com/embed?image_key=${e.features[0].properties.id}&style=photo&menu=false`;
+      const imgID = e.features[0].properties.id;
+      document.getElementById('mly-frame').src = `https://www.mapillary.com/embed?image_key=${imgID}&style=photo&menu=false`;
     });
-    map.addControl(new mapboxgl.NavigationControl(), 'bottom-right');
+
+    map.on('mouseenter', 'mapillary-points', () => { map.getCanvas().style.cursor = 'pointer'; });
+    map.on('mouseleave', 'mapillary-points', () => { map.getCanvas().style.cursor = ''; });
   }
+
   loadConfig();
 </script>
 </body>
